<resources>
    <string name="app_name">Grad. Student</string>
    <string name="google_app_id">484412463529</string>

    <!-- Drawer Title-->
    <string name="title_news">News</string>
    <string name="title_programme">Programme</string>
    <string name="title_student">Student</string>
    <string name="title_profile">Profile</string>
    <string name="title_graduation">Graduation</string>
    <string name="title_convocation">Convocation</string>
    <string name="title_settings">Settings</string>
    <string name="title_help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="title_logout">Logout</string>
    <!-- Toolbar Menu Title-->
    <string name="title_save">Save</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="title_search">Search</string>
    <string name="title_share">Share</string>
    <string name="title_filter">Filter</string>
    <string name="title_add">Add</string>
    <string name="title_next">Next</string>

    <!-- Bundle keys -->
    <string name="key_student_key">studentKey</string>
    <string name="key_student_id">studentID</string>
    <string name="key_programme_key">programmeKey</string>
    <string name="key_programme_name">programmeName</string>
    <string name="key_datePicker_textView_id">datePickerTextViewId</string>
    <string name="key_timePicker_textView_id">timePickerTextViewId</string>
    <string name="key_fragment_class_name">fragmentClassName</string>
    <string name="key_convocation_key">convocationKey</string>
    <string name="key_convocation_attendance">convocationAttendance</string>
    <string name="key_session_key">sessionKey</string>
    <string name="key_session_id">sessionId</string>
    <string name="key_gratitude_message">gratitudeMessage</string>
    <string name="key_robe_size">robeSize</string>
    <string name="key_number_of_guest">numberOfGuest</string>

    <!-- Robe size for array -->
    <string name="robe_size_xs">XS</string>
    <string name="robe_size_s">S</string>
    <string name="robe_size_m">M</string>
    <string name="robe_size_l">L</string>
    <string name="robe_size_xl">XL</string>
    <string name="robe_size_xxl">XXL</string>

    <!-- Seat status -->
    <string name="seat_status_available">Available</string>
    <string name="seat_status_occupied">Occupied</string>
    <string name="seat_status_disabled">Disabled</string>
    <string name="seat_status_selected">Selected</string>

    <!-- Programme levels -->
    <string name="programme_level_diploma">Diploma</string>
    <string name="programme_level_bachelor">Bachelor\'s Degree</string>
    <string name="programme_level_master">Master\'s Degree</string>
    <string name="programme_level_doctorate">Doctorate</string>

    <!-- Others -->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="title_submit">Submit</string>

    <!-- Array -->
    <string-array name="programme_array">
        <item>Diploma in Accounting</item>
        <item>Diploma in Business Administration</item>
        <item>Diploma in Business Information Systems</item>
        <item>Diploma in Electronic Engineering</item>
    </string-array>
    <string-array name="programme_level_array">
        <item>@string/programme_level_diploma</item>
        <item>@string/programme_level_bachelor</item>
        <item>@string/programme_level_master</item>
        <item>@string/programme_level_doctorate</item>
    </string-array>
    <string-array name="faculty_array">
        <item>Centre for Diploma Programme</item>
        <item>Faculty of Business</item>
        <item>Faculty of Computing and Informatics</item>
        <item>Faculty of Creative Multimedia</item>
        <item>Faculty of Engineering</item>
        <item>Faculty of Engineering and Technology</item>
        <item>Faculty of Information Science and Technology</item>
        <item>Faculty of Law</item>
        <item>Faculty of Management</item>
        <item>Graduate School of Management</item>
    </string-array>
    <string-array name="student_status_array">
        <item>Active</item>
        <item>Completed</item>
        <item>Pending approval</item>
    </string-array>
    <string-array name="seat_status_array">
        <item>@string/seat_status_available</item>
        <item>@string/seat_status_occupied</item>
        <item>@string/seat_status_disabled</item>
    </string-array>
    <string-array name="muet_grading_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="robe_size">
        <item>@string/robe_size_xs</item>
        <item>@string/robe_size_s</item>
        <item>@string/robe_size_m</item>
        <item>@string/robe_size_l</item>
        <item>@string/robe_size_xl</item>
        <item>@string/robe_size_xxl</item>
    </string-array>
    <string-array name="number_of_guest">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="year">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_map">Map</string>
</resources>
